groups/flowDefinitions/objects/TW1_Plano_de_mix__c.object
<CustomObject>
    <fields>
        <fullName>Id_Externo__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Id Externo</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ramo_de_atividade__c</fullName>
        <label>Ramo de atividade</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Grupo_de_atividade__c</fullName>
        <label>Grupo de atividade</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Segmento__c</fullName>
        <formula>TW1_Grupo_de_atividade__c&amp;&apos;/&apos;&amp;Ramo_de_atividade__c&amp;&apos;/&apos;&amp;TW1_Tipo_de_atividade__c</formula>
        <label>Segmento</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Tipo_de_atividade__c</fullName>
        <label>Tipo de atividade</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Plano de mix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TW1_Grupo_de_atividade__c</columns>
        <columns>Ramo_de_atividade__c</columns>
        <columns>TW1_Tipo_de_atividade__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>pt_BR</language>
    </listViews>
    <nameField>
        <label>Código Plano de mix</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planos de mix</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>